--- a/styles/responsivo.css
+++ b/styles/responsivo.css
@@ -42,7 +42,7 @@
         font-size: 18px;
         color: white;
     }
-    
+
     .menu-hamburguer {
         display: block;
         cursor: pointer;
@@ -89,7 +89,7 @@
 
     #clinica img {
         width: 100%;
-        max-width: 400px;
+        max-width: 350px;
     }
 
     #farmacia {
@@ -100,6 +100,10 @@
         flex-direction: column;
         text-align: center;
         padding: 20px;
+    }
+
+    #duvidas img{
+        max-width: 350px;
     }
 
     .duvida{
